S28 3161: Report Update - Edits (#884)